# ocirender

./: .release-plz.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/actions/quality-gate/: action.yml
.github/workflows/: ci-code.yaml  release.yaml
oci2squashfs/: Cargo.toml
oci2squashfs/src/: canonical.rs  layers.rs  lib.rs  overlay.rs  squashfs.rs  verify.rs
oci2squashfs/tests/: integration.rs  regression.rs
oci2squashfs/tests/helpers/: mod.rs
oci2squashfs_cli/: Cargo.toml
oci2squashfs_cli/src/: main.rs
ocirender-cli/: Cargo.toml
ocirender-cli/src/: main.rs
ocirender-cli/src/registry/: auth.rs  client.rs  credentials.rs  mod.rs  reference.rs
ocirender-cli/tests/: e2e.rs
ocirender-cli/tests/fixtures/: mod.rs
src/: canonical.rs  dir.rs  erofs.rs  image.rs  layers.rs  lib.rs  overlay.rs  squashfs.rs  tar.rs  tracker.rs  verify.rs
tests/: e2e.rs  image.rs  integration.rs  regression.rs  squashfs.rs
tests/fixtures/: mod.rs
tests/helpers/: mod.rs
