[workspace]
members = [ ".", "ocirender-cli" ]
default-members = [ ".", "ocirender-cli" ]
resolver = "3"

# Compile all dependencies at opt-level 3 even in debug builds.
# This makes crypto (sha2), compression (zstd, flate2, bzip2, xz2), and
# the tar parser run at full speed without requiring `--release` for the
# entire build.  First build is slower; incremental rebuilds of your own
# code are unaffected since only dependency crates are recompiled.
[profile.dev.package."*"]
opt-level = 3

[package]
name        = "ocirender"
description = "Stream and merge OCI image layers into squashfs, tar, or directory output"
license     = "Apache-2.0"
version     = "0.2.1"
homepage    = "https://github.com/edera-dev/ocirender"
repository  = "https://github.com/edera-dev/ocirender"
edition     = "2024"

[dependencies]
anyhow     = "1"
bzip2      = "0.6"
flate2     = { version = "1", features = ["zlib-rs"], default-features = false }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
sha2       = "0.10"
tar        = "0.4"
tempfile   = "3"
tokio      = { version = "1", features = ["rt", "sync"] }
xz2        = "0.1"
zstd       = "0.13"

[dev-dependencies]
tokio    = { version = "1", features = ["full"] }
libc     = "0.2"
oci-spec = { version = "0.9", features = ["image"] }

[patch.crates-io]
indicatif = { git = "https://github.com/edera-dev/indicatif.git", rev = "51e3a390b5d64ca8ab86044e578e2bb2bfe718a1" }

[lib]
name = "ocirender"
