[package]
name = "oci2squashfs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio     = { version = "1", features = ["full"] }
tar       = "0.4"
flate2    = { version = "1", features = ["zlib-rs"], default-features = false }
zstd      = "0.13"
bzip2     = "0.6"
xz2       = "0.1"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
sha2      = "0.10"
tempfile  = "3"
anyhow    = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
