[package]
name = "oci2squashfs_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oci2squashfs"
path = "src/main.rs"

[dependencies]
oci2squashfs = { path = "../oci2squashfs" }
tokio         = { version = "1", features = ["full"] }
clap          = { version = "4", features = ["derive"] }
anyhow        = "1"
