[package]
name        = "ocirender-cli"
description = "CLI for ocirender — fetch, convert, and verify OCI container images"
license     = "Apache-2.0"
version     = "0.1.2"
homepage    = "https://github.com/edera-dev/ocirender"
repository  = "https://github.com/edera-dev/ocirender"
edition     = "2024"

[features]
# Gates the e2e [[test]] target, which requires mksquashfs, squashfuse, and
# network access. Never compiled into the binary itself.
e2e = []

# network implies e2e; can't run network tests without the binary
network = ["e2e"]

[dependencies]
ocirender    = { path = ".." }
anyhow       = "1"
base64       = "0.22"
clap         = { version = "4", features = ["derive"] }
futures-util = "0.3"
indicatif    = "0.18.4"
reqwest      = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
sha2         = "0.10"
tar          = "0.4"
tempfile     = "3"
tokio        = { version = "1", features = ["full"] }

[dev-dependencies]
flate2     = { version = "1", features = ["zlib-rs"], default-features = false }
libc       = "0.2"
oci-spec   = { version = "0.9", features = ["image"] }
tar        = "0.4"

[[bin]]
name = "ocirender"
path = "src/main.rs"

[[test]]
name             = "e2e"
path             = "tests/e2e.rs"
required-features = ["e2e"]
